Topic: 增加页脚及页脚横线
Describe(What):

	* What:
	* Why:
	* How:

Related:

--- a/report/report.tex
+++ b/report/report.tex
@@ -23,10 +23,14 @@
 \lhead{\includegraphics[height=0.3cm]{img/logo.png} \ 湖北山河律师事务所}
 \chead{诉讼策略分析报告}
 \rhead{ \thepage / \pageref{LastPage}}
+\lfoot{ \scriptsize 中国武汉市江汉区新华路385号南达大楼11-13层\\
+11-13/F, Nanda Building, No.385 Xinhua Road, Jianghan District, Wuhan China\\
+电话（Tel）：+86-27-59516866　59516867　  传真（Fax）：+86-27-59516823}
 \renewcommand{\headrulewidth}{0.8pt}
 \pagestyle{fancy} % \sectionmark 的重定义需要在 \pagestyle 之后生效
 \renewcommand\sectionmark[1]{%
 	\markright{\CTEXifname{\CTEXthesection——}{}#1}}
+	\renewcommand{\footrulewidth}{0.6pt}
 
 \author{欧阳松}
 \date{2018-8-4}
